[gd_scene load_steps=23 format=2]

[ext_resource path="res://src/ui/controls/side_menu_button/side_menu_button.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/ui/pages/modules/divider/divider.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/shaders/click_effect/youtube_button_shader.shader" type="Shader" id=3]
[ext_resource path="res://src/ui/pages/side_menu/side_menu.gd" type="Script" id=4]
[ext_resource path="res://addons/SmoothScroll/SmoothScroll.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/ui/assets/textures.png" type="Texture" id=6]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0823529, 0.0470588, 0.156863, 1 )
shadow_size = 200

[sub_resource type="ShaderMaterial" id=2]
resource_local_to_scene = true
shader = ExtResource( 3 )
shader_param/color = Color( 1, 1, 1, 1 )
shader_param/width = 10.0
shader_param/margin = 10.0
shader_param/pattern = 2

[sub_resource type="ShaderMaterial" id=3]
resource_local_to_scene = true
shader = ExtResource( 3 )
shader_param/color = Color( 0.372549, 0.372549, 0.372549, 0 )
shader_param/width = 0.0
shader_param/margin = 10.0
shader_param/pattern = 2

[sub_resource type="AtlasTexture" id=4]
resource_local_to_scene = true
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 271, 442, 99, 98 )

[sub_resource type="ShaderMaterial" id=5]
resource_local_to_scene = true
shader = ExtResource( 3 )
shader_param/color = Color( 1, 1, 1, 1 )
shader_param/width = 10.0
shader_param/margin = 10.0
shader_param/pattern = 2

[sub_resource type="ShaderMaterial" id=6]
resource_local_to_scene = true
shader = ExtResource( 3 )
shader_param/color = Color( 0.372549, 0.372549, 0.372549, 0 )
shader_param/width = 0.0
shader_param/margin = 10.0
shader_param/pattern = 2

[sub_resource type="AtlasTexture" id=7]
resource_local_to_scene = true
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 25, 559, 105, 106 )

[sub_resource type="ShaderMaterial" id=8]
resource_local_to_scene = true
shader = ExtResource( 3 )
shader_param/color = Color( 1, 1, 1, 1 )
shader_param/width = 10.0
shader_param/margin = 10.0
shader_param/pattern = 2

[sub_resource type="ShaderMaterial" id=9]
resource_local_to_scene = true
shader = ExtResource( 3 )
shader_param/color = Color( 0.372549, 0.372549, 0.372549, 0 )
shader_param/width = 0.0
shader_param/margin = 10.0
shader_param/pattern = 2

[sub_resource type="AtlasTexture" id=10]
resource_local_to_scene = true
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 146, 442, 105, 106 )

[sub_resource type="ShaderMaterial" id=11]
resource_local_to_scene = true
shader = ExtResource( 3 )
shader_param/color = Color( 1, 1, 1, 1 )
shader_param/width = 10.0
shader_param/margin = 10.0
shader_param/pattern = 2

[sub_resource type="ShaderMaterial" id=12]
resource_local_to_scene = true
shader = ExtResource( 3 )
shader_param/color = Color( 0.372549, 0.372549, 0.372549, 0 )
shader_param/width = 0.0
shader_param/margin = 10.0
shader_param/pattern = 2

[sub_resource type="AtlasTexture" id=13]
resource_local_to_scene = true
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 152, 560, 104, 104 )

[sub_resource type="ShaderMaterial" id=14]
resource_local_to_scene = true
shader = ExtResource( 3 )
shader_param/color = Color( 1, 1, 1, 1 )
shader_param/width = 10.0
shader_param/margin = 10.0
shader_param/pattern = 2

[sub_resource type="ShaderMaterial" id=15]
resource_local_to_scene = true
shader = ExtResource( 3 )
shader_param/color = Color( 0.372549, 0.372549, 0.372549, 0 )
shader_param/width = 0.0
shader_param/margin = 10.0
shader_param/pattern = 2

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 24, 441, 101, 100 )

[node name="SideMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="HBoxContainer"]
margin_right = 1301.0
margin_bottom = 2368.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_stretch_ratio = 10.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="SmoothScroll" parent="HBoxContainer/Panel" instance=ExtResource( 5 )]

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/Panel/SmoothScroll"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/Panel/SmoothScroll/VBoxContainer"]
margin_right = 1301.0
margin_bottom = 550.0
rect_min_size = Vector2( 0, 550 )
mouse_filter = 1
custom_constants/margin_right = 100
custom_constants/margin_top = 100
custom_constants/margin_left = 100
custom_constants/margin_bottom = 100
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/Panel/SmoothScroll/VBoxContainer/MarginContainer"]
margin_left = 100.0
margin_top = 100.0
margin_right = 1201.0
margin_bottom = 450.0

[node name="Divider" parent="HBoxContainer/Panel/SmoothScroll/VBoxContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 550.0
margin_right = 1301.0
margin_bottom = 555.0
mouse_filter = 1

[node name="SideMenuButton3" parent="HBoxContainer/Panel/SmoothScroll/VBoxContainer" instance=ExtResource( 1 )]
material = SubResource( 2 )
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 555.0
margin_right = 1301.0
margin_bottom = 855.0

[node name="SlickButton" parent="HBoxContainer/Panel/SmoothScroll/VBoxContainer/SideMenuButton3" index="0"]
material = SubResource( 3 )

[node name="CenterContainer2" parent="HBoxContainer/Panel/SmoothScroll/VBoxContainer/SideMenuButton3/HBoxContainer" index="0"]
margin_right = 427.0

[node name="TextureRect" parent="HBoxContainer/Panel/SmoothScroll/VBoxContainer/SideMenuButton3/HBoxContainer/CenterContainer2" index="0"]
margin_left = 163.0
margin_right = 263.0
texture = SubResource( 4 )

[node name="CenterContainer" parent="HBoxContainer/Panel/SmoothScroll/VBoxContainer/SideMenuButton3/HBoxContainer" index="1"]
margin_left = 435.0
margin_right = 1301.0

[node name="Label" parent="HBoxContainer/Panel/SmoothScroll/VBoxContainer/SideMenuButton3/HBoxContainer/CenterContainer" index="0"]
margin_right = 866.0
text = "Mystery info"

[node name="SideMenuButton" parent="HBoxContainer/Panel/SmoothScroll/VBoxContainer" instance=ExtResource( 1 )]
material = SubResource( 5 )
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 855.0
margin_right = 1301.0
margin_bottom = 1155.0

[node name="SlickButton" parent="HBoxContainer/Panel/SmoothScroll/VBoxContainer/SideMenuButton" index="0"]
material = SubResource( 6 )

[node name="CenterContainer2" parent="HBoxContainer/Panel/SmoothScroll/VBoxContainer/SideMenuButton/HBoxContainer" index="0"]
margin_right = 427.0

[node name="TextureRect" parent="HBoxContainer/Panel/SmoothScroll/VBoxContainer/SideMenuButton/HBoxContainer/CenterContainer2" index="0"]
margin_left = 163.0
margin_right = 263.0
texture = SubResource( 7 )

[node name="CenterContainer" parent="HBoxContainer/Panel/SmoothScroll/VBoxContainer/SideMenuButton/HBoxContainer" index="1"]
margin_left = 435.0
margin_right = 1301.0

[node name="Label" parent="HBoxContainer/Panel/SmoothScroll/VBoxContainer/SideMenuButton/HBoxContainer/CenterContainer" index="0"]
margin_right = 866.0
text = "Save game"

[node name="SideMenuButton4" parent="HBoxContainer/Panel/SmoothScroll/VBoxContainer" instance=ExtResource( 1 )]
material = SubResource( 8 )
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 1155.0
margin_right = 1301.0
margin_bottom = 1455.0

[node name="SlickButton" parent="HBoxContainer/Panel/SmoothScroll/VBoxContainer/SideMenuButton4" index="0"]
material = SubResource( 9 )

[node name="CenterContainer2" parent="HBoxContainer/Panel/SmoothScroll/VBoxContainer/SideMenuButton4/HBoxContainer" index="0"]
margin_right = 427.0

[node name="TextureRect" parent="HBoxContainer/Panel/SmoothScroll/VBoxContainer/SideMenuButton4/HBoxContainer/CenterContainer2" index="0"]
margin_left = 163.0
margin_right = 263.0
texture = SubResource( 10 )

[node name="CenterContainer" parent="HBoxContainer/Panel/SmoothScroll/VBoxContainer/SideMenuButton4/HBoxContainer" index="1"]
margin_left = 435.0
margin_right = 1301.0

[node name="Label" parent="HBoxContainer/Panel/SmoothScroll/VBoxContainer/SideMenuButton4/HBoxContainer/CenterContainer" index="0"]
margin_right = 866.0
text = "Load game"

[node name="SideMenuButton5" parent="HBoxContainer/Panel/SmoothScroll/VBoxContainer" instance=ExtResource( 1 )]
material = SubResource( 11 )
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 1455.0
margin_right = 1301.0
margin_bottom = 1755.0

[node name="SlickButton" parent="HBoxContainer/Panel/SmoothScroll/VBoxContainer/SideMenuButton5" index="0"]
material = SubResource( 12 )

[node name="CenterContainer2" parent="HBoxContainer/Panel/SmoothScroll/VBoxContainer/SideMenuButton5/HBoxContainer" index="0"]
margin_right = 427.0

[node name="TextureRect" parent="HBoxContainer/Panel/SmoothScroll/VBoxContainer/SideMenuButton5/HBoxContainer/CenterContainer2" index="0"]
margin_left = 163.0
margin_right = 263.0
texture = SubResource( 13 )

[node name="CenterContainer" parent="HBoxContainer/Panel/SmoothScroll/VBoxContainer/SideMenuButton5/HBoxContainer" index="1"]
margin_left = 435.0
margin_right = 1301.0

[node name="Label" parent="HBoxContainer/Panel/SmoothScroll/VBoxContainer/SideMenuButton5/HBoxContainer/CenterContainer" index="0"]
margin_right = 866.0
text = "Settings"

[node name="SideMenuButton2" parent="HBoxContainer/Panel/SmoothScroll/VBoxContainer" instance=ExtResource( 1 )]
material = SubResource( 14 )
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 1755.0
margin_right = 1301.0
margin_bottom = 2055.0

[node name="SlickButton" parent="HBoxContainer/Panel/SmoothScroll/VBoxContainer/SideMenuButton2" index="0"]
material = SubResource( 15 )

[node name="CenterContainer2" parent="HBoxContainer/Panel/SmoothScroll/VBoxContainer/SideMenuButton2/HBoxContainer" index="0"]
margin_right = 427.0

[node name="TextureRect" parent="HBoxContainer/Panel/SmoothScroll/VBoxContainer/SideMenuButton2/HBoxContainer/CenterContainer2" index="0"]
margin_left = 163.0
margin_right = 263.0
texture = SubResource( 16 )

[node name="CenterContainer" parent="HBoxContainer/Panel/SmoothScroll/VBoxContainer/SideMenuButton2/HBoxContainer" index="1"]
margin_left = 435.0
margin_right = 1301.0

[node name="Label" parent="HBoxContainer/Panel/SmoothScroll/VBoxContainer/SideMenuButton2/HBoxContainer/CenterContainer" index="0"]
margin_right = 866.0
text = "Exit"

[node name="Control" type="Control" parent="HBoxContainer"]
margin_left = 1309.0
margin_right = 1440.0
margin_bottom = 2368.0
mouse_filter = 1
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[connection signal="pressed" from="HBoxContainer/Panel/SmoothScroll/VBoxContainer/SideMenuButton3" to="." method="_on_SideMenuButton3_pressed"]
[connection signal="pressed" from="HBoxContainer/Panel/SmoothScroll/VBoxContainer/SideMenuButton" to="." method="_on_SideMenuButton_pressed"]
[connection signal="pressed" from="HBoxContainer/Panel/SmoothScroll/VBoxContainer/SideMenuButton5" to="." method="_on_SideMenuButton5_pressed"]
[connection signal="pressed" from="HBoxContainer/Panel/SmoothScroll/VBoxContainer/SideMenuButton2" to="." method="_on_SideMenuButton2_pressed"]
[connection signal="gui_input" from="HBoxContainer/Control" to="." method="_on_Control_gui_input"]

[editable path="HBoxContainer/Panel/SmoothScroll/VBoxContainer/SideMenuButton3"]
[editable path="HBoxContainer/Panel/SmoothScroll/VBoxContainer/SideMenuButton"]
[editable path="HBoxContainer/Panel/SmoothScroll/VBoxContainer/SideMenuButton4"]
[editable path="HBoxContainer/Panel/SmoothScroll/VBoxContainer/SideMenuButton5"]
[editable path="HBoxContainer/Panel/SmoothScroll/VBoxContainer/SideMenuButton2"]
